自分の名前を追加

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ th {
 </div>
 <ol>
   <li>氏名（学生番号）</li>
-  <li>氏名（学生番号）</li>
+  <li>三谷悠太（054786）</li>
   <li>氏名（学生番号）</li>
   <li>氏名（学生番号）</li>
   <li>氏名（学生番号）</li>
