開発体制、開発スケジュール、見積りの追加

--- a/DevelopmentPlan/index.html
+++ b/DevelopmentPlan/index.html
@@ -252,8 +252,7 @@ th {
 <h3><a name="KanseiSaseteKudasai">開発体制</a></h3>
 </div>
 
-  <p>長期課題を行うにあたってプロジェクトチームを発足する。このプロジェクトは京都産業大学情報理工学部の講義「ソフトウェア工学II」での開発
-    プロジェクトであるため、開発メンバは受講生である。開発に関わるメンバーの一覧と担当者を以下に示す。</p>
+  <p>長期課題を行うにあたってプロジェクトチームを発足する。このプロジェクトは京都産業大学情報理工学部の講義「ソフトウェア工学II」での開発プロジェクトであるため、開発メンバは受講生である。開発に関わるメンバーの一覧と担当者を以下に示す。</p>
   <table summary = "table">
     <tbody>
       <tr>
@@ -318,8 +317,7 @@ th {
       </tr>
     </tbody>
   </table>
-  <p>開発計画は以上のメンバーで行う。目的を達成するために定期的に音声通話または対面で集まって会議を行い、チームの意識を高めていく。
-    また、作業が遅れている場合は担当でない者も作業に参加し、全員で協力して柔軟に進めていく。</p>
+  <p>開発計画は以上のメンバーで行う。目的を達成するために定期的に音声通話または対面で集まって会議を行い、チームの意識を高めていく。また、作業が遅れている場合は担当でない者も作業に参加し、全員で協力して柔軟に進めていく。</p>
 
   <div class="belt">
     <h3><a name="KaihatsuScedule">開発スケジュール</a></h3>
