"の欠除の改定

--- a/DevelopmentPlan/index.html
+++ b/DevelopmentPlan/index.html
@@ -260,20 +260,20 @@ th {
           <table class="content" summary="table">
             <tbody>
               <tr>
-                <td algin="right">プロジェクトマネジャー:</td>
-                <td algin="left>菱田光希</td>
+                <td align="right">プロジェクトマネジャ：</td>
+                <td align="left">菱田光希</td>
               </tr>
               <tr>
-                <td algin="right">デザイナ:</td>
-                <td algin="left>三谷悠太</td>
+                <td align="right">デザイナ：</td>
+                <td align="left">三谷悠太</td>
               </tr>
               <tr>
-                <td algin="right">プログラマ:</td>
-                <td algin="left>出口楓真</td>
+                <td align="right">プログラマ：</td>
+                <td align="left">出口楓真</td>
               </tr>
               <tr>
-                <td algin="right">テスタ:</td>
-                <td algin="left>濱野洋大</td>
+                <td align="right">テスタ：</td>
+                <td align="left">濱野洋大</td>
               </tr>
             </tbody>
           </table>
@@ -288,28 +288,28 @@ th {
           <table class="content" summary="table">
             <tbody>
               <tr>
-                <td algin="right">ForestModel:</td>
-                <td algin="left>菱田光希、三谷悠太</td>
+                <td align="right">ForestModel：</td>
+                <td align="left">菱田光希、三谷悠太</td>
               </tr>
               <tr>
-                <td algin="right">ForestController:</td>
-                <td algin="left>菱田光希、三谷悠太</td>
+                <td align="right">ForestController：</td>
+                <td align="left">菱田光希、三谷悠太</td>
               </tr>
               <tr>
-                <td algin="right">ForestView:</td>
-                <td algin="left>濱野洋大、出口楓真</td>
+                <td align="right">ForestView：</td>
+                <td align="left">濱野洋大、出口楓真</td>
               </tr>
               <tr>
-                <td algin="right">Forest:</td>
-                <td algin="left>濱野洋大、出口楓真</td>
+                <td align="right">Forest：</td>
+                <td align="left">濱野洋大、出口楓真</td>
               </tr>
               <tr>
-                <td algin="right">Branch:</td>
-                <td algin="left>濱野洋大、出口楓真</td>
+                <td align="right">Branch：</td>
+                <td align="left">濱野洋大、出口楓真</td>
               </tr>
               <tr>
-                <td algin="right">Node:</td>
-                <td algin="left>菱田光希、三谷悠太</td>
+                <td align="right">Node：</td>
+                <td align="left">菱田光希、三谷悠太</td>
               </tr>
             </tbody>
           </table>
@@ -330,7 +330,7 @@ th {
         <table class="content" summary="table">
           <tbody>
             <tr>
-              <td class="center-small"><a href="kaihatsusukejyu-ru.png"><img class="borderless" src="kaihatsusukejyu-ru.png" width="500" height="200" alt="ガントチャート"></a></td>
+              <td class="center-small"><a href="kaihatsusukejyu-ru.png"><img class="borderless" src="kaihatsusukejyu-ru.png" width="450" height="250" alt="ガントチャート"></a></td>
             </tr>
           </tbody>
         </table>
