--- a/BasicDesign/index.html
+++ b/BasicDesign/index.html
@@ -5,8 +5,10 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta name="keywords" content="Aoki,Atsushi,Smalltalk,Smalltalker,Program,Programmer,Object,Oriented,Programming">
+<meta name="keywords" content="Deguti Fuma, Hishida Koki, Mitani Yuta, Hamano Yodai, Forest, Java, Object, Programming">
 <meta name="description" content="ソフトウェア工学IIのホームページ">
 <meta name="author" content="AOKI Atsushi">
+<meta name="author" content="Deguti Fuma, Hishida Koki, Mitani Yuta, Hamano Yodai">
 <link rev="made" href="index.html">
 <link rel="index" href="index.html">
 <style type="text/css">
@@ -249,7 +251,14 @@ th {
 <hr>
 <h2>ソフトウェア工学II「樹状整列」基本設計書</h2>
 <div class="belt">
-<h3><a name="KanseiSaseteKudasai">完成させてください</a></h3>
+<ul>
+  <li><a href="#BD00">クラス図</a></li>
+  <li><a href="#BD01">状態遷移図</a></li>
+  <li><a href="#BD02">データフロー図</a></li>
+  <li><a href="#BD03">シーケンス図</a></li>
+  <li><a href="#BD04">外観図「ウィンドウ構成」</a></li>
+</ul>
+<h3><a name="BD00">クラス図</a></h3>
 </div>
 <hr>
 <div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
