--- a/BasicDesign/index.html
+++ b/BasicDesign/index.html
@@ -258,8 +258,25 @@ th {
   <li><a href="#BD03">シーケンス図</a></li>
   <li><a href="#BD04">外観図「ウィンドウ構成」</a></li>
 </ul>
-<h3><a name="BD00">クラス図</a></h3>
 </div>
+<div class="belt">
+<h3><a name="BD00">クラス図</a>「全体構成図」</h3>
+</div>
+<table summary="table">
+  <tbody>
+    <tr>
+      <td>
+      <table class="content" summary="table">
+        <tbody>
+          <tr>
+            <td class="center-small"><a href="images/Basic_class.png><img class="borderless" src="thumbnails/Basic_class.png" width="768" height="342" alt="全体のクラス図のダウンロード"></a></td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
 <hr>
 <div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
 </body>
