基本設計書の修正と追加

--- a/BasicDesign/index.html
+++ b/BasicDesign/index.html
@@ -269,7 +269,79 @@ th {
       <table class="content" summary="table">
         <tbody>
           <tr>
-            <td class="center-small"><a href="images/Basic_class.png><img class="borderless" src="thumbnails/Basic_class.png" width="768" height="342" alt="全体のクラス図のダウンロード"></a></td>
+            <td class="center-small"><a href="images/Basic_class.png"><img class="borderless" src="thumbnails/Basic_class.png" width="800" height="450" alt="全体のクラス図のダウンロード"></a></td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="belt">
+<h3><a name="BD01">状態遷移図</a></h3>
+</div>
+<table summary="table">
+  <tbody>
+    <tr>
+      <td>
+      <table class="content" summary="table">
+        <tbody>
+          <tr>
+            <td class="center-small"><a href=""><img class="borderless" src="" width="800" height="450" alt="状態遷移図のダウンロード"></a></td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="belt">
+<h3><a name="BD02">データフロー図</a></h3>
+</div>
+<table summary="table">
+  <tbody>
+    <tr>
+      <td>
+      <table class="content" summary="table">
+        <tbody>
+          <tr>
+            <td class="center-small"><a href=""><img class="borderless" src="" width="800" height="450" alt="データフロー図のダウンロード"></a></td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="belt">
+<h3><a name="BD03">シーケンス図</a></h3>
+</div>
+<table summary="table">
+  <tbody>
+    <tr>
+      <td>
+      <table class="content" summary="table">
+        <tbody>
+          <tr>
+            <td class="center-small"><a href="images/SequenceDiagram.png"><img class="borderless" src="thumbnails/SequenceDiagram.png" width="700" height="450" alt="シーケンス図のダウンロード"></a></td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="belt">
+<h3><a name="BD04">外観図</a>「ウィンドウ構成」</h3>
+</div>
+<table summary="table">
+  <tbody>
+    <tr>
+      <td>
+      <table class="content" summary="table">
+        <tbody>
+          <tr>
+            <td class="center-small"><a href=""><img class="borderless" src="" width="800" height="450" alt="ウィンドウ構成の外観図のダウンロード"></a></td>
           </tr>
         </tbody>
       </table>
@@ -278,6 +350,6 @@ th {
   </tbody>
 </table>
 <hr>
-<div class="right-small">Copyright 20xx Project xx, Updated: 2017/03/13 (Created: 2009/11/11)</div>
+<div class="right-small">Copyright 2022 Project forest, Updated: 2022/07/24 (Created: 2009/11/11)</div>
 </body>
 </html>
