開発計画書のガントチャートの追加と修正

--- a/DevelopmentPlan/index.html
+++ b/DevelopmentPlan/index.html
@@ -5,8 +5,10 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta name="keywords" content="Aoki,Atsushi,Smalltalk,Smalltalker,Program,Programmer,Object,Oriented,Programming">
+<meta name="keywords" content="Deguti Fuma, Hishida Koki, Mitani Yuta, Hamano Yodai, Forest, Java, Object, Programming">
 <meta name="description" content="ソフトウェア工学IIのホームページ">
 <meta name="author" content="AOKI Atsushi">
+<meta name="author" content="Deguti Fuma, Hishida Koki, Mitani Yuta, Hamano Yodai">
 <link rev="made" href="index.html">
 <link rel="index" href="index.html">
 <style type="text/css">
@@ -249,7 +251,7 @@ th {
 <hr>
 <h2>ソフトウェア工学II「樹状整列」開発計画書</h2>
 <div class="belt">
-<h3><a name="KanseiSaseteKudasai">開発体制</a></h3>
+<h3><a name="KaihatsuTaisei">開発体制</a></h3>
 </div>
 
   <p>長期課題を行うにあたってプロジェクトチームを発足する。このプロジェクトは京都産業大学情報理工学部の講義「ソフトウェア工学II」での開発プロジェクトであるため、開発メンバは受講生である。開発に関わるメンバーの一覧と担当者を以下に示す。</p>
@@ -257,26 +259,26 @@ th {
     <tbody>
       <tr>
         <td>
-          <table class="content" summary="table">
-            <tbody>
-              <tr>
-                <td algin="right">プロジェクトマネジャー:</td>
-                <td algin="left>菱田光希</td>
-              </tr>
-              <tr>
-                <td algin="right">デザイナ:</td>
-                <td algin="left>三谷悠太</td>
-              </tr>
-              <tr>
-                <td algin="right">プログラマ:</td>
-                <td algin="left>出口楓真</td>
-              </tr>
-              <tr>
-                <td algin="right">テスタ:</td>
-                <td algin="left>濱野洋大</td>
-              </tr>
-            </tbody>
-          </table>
+        <table class="content" summary="table">
+          <tbody>
+            <tr>
+              <td align="right">プロジェクトマネージャ：</td>
+              <td align="left">菱田 光希</td>
+            </tr>
+            <tr>
+              <td align="right">デザイナ：</td>
+              <td align="left">三谷 悠太</td>
+            </tr>
+            <tr>
+              <td align="right">プログラマ：</td>
+              <td align="left">出口 楓真</td>
+            </tr>
+            <tr>
+              <td align="right">テスタ：</td>
+              <td align="left">濱野 洋大</td>
+            </tr>
+          </tbody>
+        </table>
         </td>
       </tr>
     </tbody>
@@ -285,34 +287,34 @@ th {
     <tbody>
       <tr>
         <td>
-          <table class="content" summary="table">
-            <tbody>
-              <tr>
-                <td algin="right">ForestModel:</td>
-                <td algin="left>菱田光希、三谷悠太</td>
-              </tr>
-              <tr>
-                <td algin="right">ForestController:</td>
-                <td algin="left>菱田光希、三谷悠太</td>
-              </tr>
-              <tr>
-                <td algin="right">ForestView:</td>
-                <td algin="left>濱野洋大、出口楓真</td>
-              </tr>
-              <tr>
-                <td algin="right">Forest:</td>
-                <td algin="left>濱野洋大、出口楓真</td>
-              </tr>
-              <tr>
-                <td algin="right">Branch:</td>
-                <td algin="left>濱野洋大、出口楓真</td>
-              </tr>
-              <tr>
-                <td algin="right">Node:</td>
-                <td algin="left>菱田光希、三谷悠太</td>
-              </tr>
-            </tbody>
-          </table>
+        <table class="content" summary="table">
+          <tbody>
+            <tr>
+              <td align="right">ForestModel：</td>
+              <td align="left">菱田光希・三谷悠太</td>
+            </tr>
+            <tr>
+              <td align="right">ForestController：</td>
+              <td align="left">菱田光希・三谷悠太</td>
+            </tr>
+            <tr>
+              <td align="right">ForestView：</td>
+              <td align="left">濱野洋大・出口楓真</td>
+            </tr>
+            <tr>
+              <td align="right">Forest：</td>
+              <td ailgn="left">濱野洋大・出口楓真</td>
+            </tr>
+            <tr>
+              <td align="right">Branch：</td>
+              <td align="left">濱野洋大・出口楓真</td>
+            </tr>
+            <tr>
+              <td align="right">Node：</td>
+              <td align="left">菱田光希・三谷悠太</td>
+            </tr>
+          </tbody>
+        </table>
         </td>
       </tr>
     </tbody>
@@ -330,7 +332,7 @@ th {
         <table class="content" summary="table">
           <tbody>
             <tr>
-              <td class="center-small"><a href="kaihatsusukejyu-ru.png"><img class="borderless" src="kaihatsusukejyu-ru.png" width="500" height="200" alt="ガントチャート"></a></td>
+              <td class="center-small"><a href="images/ganto.png"><img class="borderless" src="thumbnails/ganto.png" width="1522" height="322" alt="ガントチャートのダウンロード"></a></td>
             </tr>
           </tbody>
         </table>
